ingress.production.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - portal.aquaticsymbiosisgenomics.org
    secretName: tls-secret
  rules:
  - host: portal.aquaticsymbiosisgenomics.org
    http:
      paths:
      - path: /
        backend:
          serviceName: asg-frontend
          servicePort: 80
